# cassandra-dali-plugin

./: .gitignore  Dockerfile  Dockerfile.cassandra  Dockerfile.cuda  Dockerfile.dali-cassandra  Dockerfile.dali-cassandra-triton  Dockerfile.nvcr-pytorch  Dockerfile.triton  LICENSE  README.md  docker-compose.triton.yml  docker-compose.yml  gen-certs.sh  setup.py
aws-docker/: build-and-run-all-client-loopread.fish  build-and-run-all-client-tests.fish  build-and-run-all-client-train.fish
aws-docker/cassandra/: Dockerfile.cassandra  build-and-run.sh
aws-docker/client/: Dockerfile.dali  build-and-run-dali-torch.sh  (+1 more)
client/: Dockerfile.tf  run-dali-torch.sh
crs4/cpp/: CMakeLists.txt  ThreadPool.h  batch_loader.cc  batch_loader.h  batch_loader_ooo.cc  batch_loader_ooo.h  batchhandler.cc  batchhandler.h  build.sh  cassandra.cc  cassandra.cu  cassandra.h  cassandra_dali.cc  cassandra_dali.h  cassandra_dali_decoupled.cc  cassandra_dali_decoupled.h  cassandra_dali_interactive.cc  cassandra_dali_interactive.h  cassandra_dali_selffeed.cc  cassandra_dali_selffeed.h  cassandra_dali_uncoupled.cc  credentials.h  numpy.cc  numpy.h  numpy_decoder.cc  numpy_decoder.h  test.sh
dali/: test.py
docker-scripts/: test-ade20k.sh  test-corel5k.sh  test-imagenette.sh  test-lightning.sh  test-splitfile.sh
docs/: LFN.md
minio/: start-minio.sh
notebooks/: log_analysis.py  log_loop_read_analysis.py  ss-log.py
tensorflow/: Dockerfile
varia/: cqlsh.rc  edit_cassandra_conf.py  edit_cassandra_yaml.py  entrypoint-cassandra.sh  entrypoint-dali-cassandra.sh  entrypoint.sh  keystore
(+206 files in other folders)
